--- a/package.json
+++ b/package.json
@@ -2,20 +2,42 @@
   "name": "alphab",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://EmelineLeduc.github.io/AlphaB",
   "dependencies": {
+    "@atomap/use-places-autocomplete": "^1.0.4",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
+    "@material-ui/utils": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
+    "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "gh-pages": "^3.2.0",
+    "google-map-react": "^2.1.9",
+    "notistack": "^1.0.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-places-autocomplete": "^7.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-speech-kit": "^3.0.1",
+    "styled-components": "^5.2.3",
+    "swiper": "^6.5.9",
+    "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
