--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.6.3",
     "gh-pages": "^3.2.0",
     "google-map-react": "^2.1.9",
     "notistack": "^1.0.6",
